--- a/index.html
+++ b/index.html
@@ -68,6 +68,28 @@
                 <button id="confirm-result-btn" class="main-action-btn">確認</button>
             </div>
         </div>
+
+        <!-- Mobile Debug Console -->
+        <div id="debug-console" style="
+            display: none; /* Enabled via JS if needed, or by default for this test */
+            display: block;
+            position: fixed; 
+            bottom: 0; 
+            left: 0; 
+            width: 100%; 
+            height: 120px; 
+            background: rgba(0,0,0,0.9); 
+            color: #0f0; 
+            font-family: monospace; 
+            font-size: 12px; 
+            overflow-y: scroll; 
+            z-index: 10000; 
+            padding: 10px;
+            pointer-events: none;
+            opacity: 0.8;">
+            <div>Debug Log Started...</div>
+        </div>
+
     </div>
 
     <script src="script.js"></script>
